--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name='dmca-site-verification' content='Yjh4NDdPTVJJalM4VnZQVloxNEYxdz090' />
 </head>
   <body>
-
+    <a href="https://diariocronicas.com/"> </a>
+    <a href="https://innovation.world/"> </a>
 
 </body>
 </html>
